<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    tools:context=".view.fragments.MainFragment"
    app:layoutDescription="@xml/fragment_main_scene">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/center_guide_line_horizontal"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_marginHorizontal="0dp"
        android:layout_height="0dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:lottie_rawRes="@raw/dashboard_animation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/out_line"
        android:layout_width="250dp"
        app:layout_constraintTop_toTopOf="@id/animation_view"
        app:layout_constraintBottom_toBottomOf="@id/animation_view"
        app:layout_constraintStart_toStartOf="@id/animation_view"
        app:layout_constraintEnd_toEndOf="@id/animation_view"
        android:background="@drawable/out_line"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/inner_bg"
            android:layout_width="match_parent"
            android:background="@drawable/inner_bg"
            android:layout_margin="15sp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/icShield"
            android:layout_width="80dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/inner_bg"
            android:src="@drawable/ic_shield"
            android:layout_height="78dp"/>

        <TextView
            android:id="@+id/scan_txt"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/icShield"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Scan"
            android:textSize="28sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/lato_bold"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/error_container"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/scan_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="18sp"
                android:src="@drawable/ic_error"
                android:layout_height="18sp"/>

            <TextView
                android:id="@+id/countErrors"
                android:layout_width="wrap_content"
                android:text=""
                android:includeFontPadding="false"
                android:textSize="15sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/red"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guide_line_horizontal"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guide_line_vertical"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>


    <LinearLayout
        android:id="@+id/plate_container"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/center_guide_line_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/device_scan_container"
            android:layout_width="0dp"
            app:cardCornerRadius="19dp"
            android:translationZ="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5sp"
            app:cardElevation="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="@id/virus_check_container"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/center_guide_line_horizontal"
            app:layout_constraintEnd_toEndOf="@id/center_guide_line_vertical"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/phone_image_view"
                    android:layout_width="48dp"
                    android:padding="10sp"
                    android:layout_margin="15sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/ic_phone"
                    android:background="@drawable/ic_background"
                    android:layout_height="48dp"/>

                <TextView
                    android:id="@+id/title_phone"
                    app:layout_constraintTop_toBottomOf="@id/phone_image_view"
                    app:layout_constraintStart_toStartOf="@id/phone_image_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/device_scan"
                    android:textSize="17sp"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/dark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/description_phone"
                    app:layout_constraintTop_toBottomOf="@id/title_phone"
                    app:layout_constraintStart_toStartOf="@id/phone_image_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/show_you_all_info_n_about_phone"
                    android:textSize="14sp"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/light_silver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description_phone"
                    android:text="@string/scan"
                    android:layout_margin="16sp"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:fontFamily="@font/lato_bold"
                    android:background="@drawable/btn_bg"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/virus_check_container"
            android:layout_width="0dp"
            app:cardCornerRadius="19dp"
            android:translationZ="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10sp"
            app:cardElevation="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/virus_image_view"
                android:layout_width="48dp"
                android:padding="10sp"
                android:layout_margin="15sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_virus"
                android:background="@drawable/ic_background"
                android:layout_height="48dp"/>

            <TextView
                android:id="@+id/title_virus"
                app:layout_constraintTop_toBottomOf="@id/virus_image_view"
                app:layout_constraintStart_toStartOf="@id/virus_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16sp"
                android:text="@string/check_for_viruses"
                android:textSize="17sp"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/dark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/description_virus"
                app:layout_constraintTop_toBottomOf="@id/title_virus"
                app:layout_constraintStart_toStartOf="@id/virus_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16sp"
                android:text="@string/show_you_all_info_about_phone"
                android:textSize="14sp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/light_silver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnVirusCheck"
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_virus"
                android:text="@string/check"
                android:layout_margin="16sp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:fontFamily="@font/lato_bold"
                android:background="@drawable/btn_bg"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/dashboard_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-24dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="1dp"
        android:elevation="4dp"
        android:translationZ="5dp"
        android:layout_marginTop="180dp"
        app:cardBackgroundColor="@color/bg_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/thumbView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/thumb_top"
                android:layout_width="53dp"
                android:layout_height="6dp"/>

            <TextView
                android:id="@+id/title_dashboard"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/thumbView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/dashboard"
                android:layout_marginTop="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:fontFamily="@font/lato_bold"
                android:layout_height="wrap_content"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sectionList"
                app:layout_constraintTop_toBottomOf="@id/title_dashboard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16sp"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.motion.widget.MotionLayout>